# kwin

./: CMakeLists.txt  main_wayland.cpp
autotests/: CMakeLists.txt  mock_effectshandler.h  test_builtin_effectloader.cpp  test_plugin_effectloader.cpp  test_scripted_effectloader.cpp  test_virtual_desktops.cpp  test_window_paint_data.cpp
autotests/drm/: CMakeLists.txt  drmTest.cpp  mock_drm.cpp  mock_drm.h
cmake/modules/: FindLibeis.cmake  Findlibxcvt.cmake
kconf_update/: CMakeLists.txt  kwin.upd
src/: CMakeLists.txt  abstract_client.cpp  appmenu.cpp  appmenu.h  composite.cpp  debug_console.cpp  effectloader.cpp  effects.cpp  effects.h  gestures.cpp  globalshortcuts.cpp  globalshortcuts.h  idle_inhibition.cpp  idle_inhibition.h  idledetector.cpp  idledetector.h  input.cpp  input.h  main.h  main_wayland.cpp  org.kde.kappmenu.xml  platform.cpp  platform.h  pointer_input.cpp  pointer_input.h  renderbackend.cpp  renderbackend.h  renderloop.cpp  renderloop.h  renderloop_p.h  scene.cpp  scene.h  surfaceitem.cpp  surfaceitem_internal.cpp  surfaceitem_wayland.cpp  surfaceitem_x11.cpp  touch_input.cpp  virtualdesktops.cpp  wayland_server.cpp  wayland_server.h  (+7 more)
src/backends/drm/: CMakeLists.txt  drm_abstract_egl_backend.cpp  drm_abstract_egl_backend.h  drm_backend.cpp  drm_egl_gbm_backend.cpp  drm_egl_gbm_backend.h  drm_egl_multi_backend.cpp  drm_egl_multi_backend.h  drm_egl_stream_backend.cpp  drm_egl_stream_backend.h  drm_gpu.cpp  drm_gpu.h  drm_object_connector.cpp  drm_output.cpp  drm_output.h  drm_pipeline.cpp  drm_pipeline.h  drm_qpainter_backend.cpp  drm_qpainter_backend.h  egl_gbm_backend.cpp  egl_gbm_backend.h  egl_multi_backend.cpp  gbm_surface.cpp  gbm_surface.h
src/backends/fbdev/: CMakeLists.txt  fb_backend.cpp  fb_qpainter_backend.cpp  fb_qpainter_backend.h
src/backends/libinput/: CMakeLists.txt  Messages.sh  connection.cpp  device.cpp  kwininputdevice-cli.cpp
src/backends/virtual/: CMakeLists.txt  virtual_backend.cpp  virtual_egl_gbm_backend.cpp  virtual_egl_gbm_backend.h  virtual_qpainter_backend.cpp  virtual_qpainter_backend.h
src/backends/wayland/: CMakeLists.txt  wayland_backend.cpp  wayland_egl_backend.cpp  wayland_egl_backend.h  wayland_qpainter_backend.cpp  wayland_qpainter_backend.h
src/backends/x11/windowed/: CMakeLists.txt  x11windowed_backend.cpp  x11windowed_egl_backend.cpp  x11windowed_egl_backend.h  x11windowed_qpainter_backend.cpp  x11windowed_qpainter_backend.h
src/decorations/: decoratedclient.cpp
src/effects/: CMakeLists.txt  effect_builtins.cpp  effect_builtins.h  shaders.qrc
src/effects/backgroundcontrast/: contrast.cpp
src/effects/blur/: blur.cpp
src/effects/coverswitch/: coverswitch.cpp
src/effects/desktopgrid/: desktopgrid.cpp
src/effects/fallapart/: fallapart.cpp
src/effects/glide/: glide.cpp
src/effects/magiclamp/: magiclamp.cpp
src/effects/overview/: overvieweffect.cpp  overvieweffect.h
src/effects/overview/qml/: DesktopBar.qml
src/effects/presentwindows/: presentwindows.cpp
src/effects/sheet/: sheet.cpp
src/effects/slide/: slide.cpp
src/effects/slideback/: slideback.cpp
src/effects/slidingpopups/: slidingpopups.cpp
src/helpers/wayland_wrapper/: kwin_wrapper.cpp
src/kcmkwin/common/: effectsmodel.cpp
src/kcmkwin/kwinrules/: kcmrules.cpp  kcmrules.h  main.cpp
src/kcmkwin/kwintabbox/: main.cpp
src/libeis/: connection.cpp  connection.h
src/libkwineffects/: kwinanimationeffect.cpp  kwineffectquickview.cpp  kwineffectquickview.h  kwineffects.cpp  kwineffects.h  kwinquickeffect.cpp  kwinquickeffect.h
src/platformsupport/scenes/opengl/: abstract_egl_backend.cpp  openglbackend.cpp  openglbackend.h
src/platformsupport/scenes/qpainter/: qpainterbackend.h
src/plugins/idletime/: poller.cpp
src/plugins/screencast/: pipewirestream.cpp  pipewirestream.h
src/scenes/opengl/: scene_opengl.cpp  scene_opengl.h
src/scenes/qpainter/: scene_qpainter.cpp  scene_qpainter.h
src/scripting/: genericscriptedconfig.cpp
